バンドパス修正

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 JKspeech
 __pycache__
+processing
+problem
+token.txt
+problem
+create-problem.py
+fftonly.py
 untitled5.py
 untitled6.py
-token.txt
+untitled7.py
+test.py
